# server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  data_source.cpp  data_source.h  main.cpp
config/: priemka.json  prod.json  test.json
contrib/: CMakeLists.txt
contrib/httplib/: CMakeLists.txt  httplib.h
contrib/json/: CMakeLists.txt  json.h
contrib/md5/: CMakeLists.txt  md5.cpp
contrib/mongo-c-driver/: CMakeLists.txt
contrib/mongo-c-driver/libbson/: CMakeLists.txt
contrib/mongo-c-driver/libbson/src/: bson.h
contrib/mongo-c-driver/libbson/src/bson/: bson-config-osx.h  bson-config-win.h  bson-config.h  bson-macros.h  bson-version.h
contrib/mongo-c-driver/libmongoc/: CMakeLists.txt
contrib/mongo-c-driver/libmongoc/src/: mongoc.h
contrib/mongo-c-driver/libmongoc/src/mongoc/: mongoc-cluster-sasl.c  mongoc-config.h  mongoc-crypto.c  mongoc-init.c  mongoc-openssl.c  mongoc-ssl.c  mongoc-stream-tls.c  mongoc-version.h
contrib/mongo-c-driver/src/libbson/: CMakeLists.txt
contrib/mongo-c-driver/src/libmongoc/: CMakeLists.txt
contrib/mongo-c-driver/tools/: CMakeLists.txt
contrib/zlib/: CMakeLists.txt  deflate.c
english/: CMakeLists.txt
english/collections/: CMakeLists.txt  common_set.cpp  common_set.h  main.cpp  main.h  session_collection.cpp  session_collection.h  translation_collection.cpp  translation_collection.h  translation_to_category_collection.cpp  translation_to_category_collection.h  user_collection.cpp  user_collection.h  word_category_collection.cpp  word_category_collection.h  word_collection.cpp  word_collection.h
english/handlers/: CMakeLists.txt  common.cpp  common.h  login.h  pagination.cpp  pagination.h  register_user.h  registration.h  routing.h  user.h  users.cpp  users.h
english/handlers/admin/: CMakeLists.txt  sessions.cpp  sessions.h  translations.cpp  translations.h  users.cpp  users.h  word_categories.cpp  word_categories.h
english/records/: CMakeLists.txt  session_record.cpp  session_record.h  translation_record.cpp  translation_record.h  translation_to_category_record.cpp  translation_to_category_record.h  user_record.cpp  user_record.h  word_category_record.cpp  word_category_record.h  word_record.cpp  word_record.h
english/validators/: CMakeLists.txt  validator_common_english.cpp  validator_common_english.h  validator_login.cpp  validator_login.h  validator_translation.cpp  validator_translation.h  validator_user.cpp  validator_user.h  validator_word_category.cpp  validator_word_category.h
english/validators/admin/: validator_admin_user.cpp  validator_admin_user.h  validator_translation.cpp  validator_translation.h  validator_translation_to_category.cpp  validator_translation_to_category.h  validator_word_category.h
handlers/: .hi.cpp.swp  hi.cpp  hi.h  numbers.cpp  numbers.h  register_user.h
scripts/: client.py  data_generator.py  mongo_add_admin.js  prepare_script.js  run_test.bat
scripts/english/: client.py  data_generator.py
scripts/english/initial_data/: main.py  translations_for_uploading.json
scripts/helpers/: html_helper.py  io_helper.py
scripts/prepare_dictionary/parsers/: parser_promt.py
scripts/preparing_data/: add_test_data.py  main.py
scripts/tests/: main.py  random_generator.py  test_english.py
sources/: CMakeLists.txt
sources/application/: CMakeLists.txt  application.cpp  application.h
sources/collections/: CMakeLists.txt  base.cpp  base.h  collection.cpp  collection.h
sources/data_source/: CMakeLists.txt  data_source.cpp  data_source.h
sources/data_source/collections/: CMakeLists.txt  base.cpp  base.h  collection.h  user.cpp  user.h
sources/handlers/: hi.h  numbers.h
sources/records/: CMakeLists.txt  base_record.cpp  base_record.h  record.cpp  record.h
sources/validators/: CMakeLists.txt  validator.cpp  validator.h
tests/: prepare_db_to_tests.js  run_test.bat
tests/english/: _test_word_categories.py  client.py  data_generator.py  test_translations.py  test_users.py
tests/english/admin/: test_admin_translations.py  test_admin_users.py  test_admin_word_categories.py
util/: CMakeLists.txt
util/generic/: CMakeLists.txt  algorithm.cpp  algorithm.h  ctype.cpp  ctype.h  deque.h  hash_functions.cpp  hash_functions.h  hashmap.h  hashset.cpp  hashset.h  holder.h  iostream.cpp  iostream.h  list.h  map.h  maybe.h  maybe_traits.cpp  maybe_traits.h  noncopyable.h  queue.h  set.h  stack.h  string.cpp  string.h  vector.h
